test/libhyperion/syntaxTests/events/file_level_event_duplicate_definition_via_import.hyp
==== Source: A.hyp ====
event E();
==== Source: B.hyp ====
import "A.hyp";

event E();
// ----
// DeclarationError 5883: (B.hyp:17-27): Event with same name and parameter types defined twice.
